--- a/admin-service/src/main/resources/i18n/messages_ar.properties
+++ b/admin-service/src/main/resources/i18n/messages_ar.properties
@@ -1,7 +1,7 @@
-auth.username.required=??? ???????? ?????
-auth.username.invalid=???? ?? ????? ??? ???????? ??? ???? ?? ????? ?? ???? ?? ???? ?? ???? ????? (???? ?????)
-auth.password.required=???? ?????? ??????
-auth.password.weak=??? ?? ???? ???? ?????? ??? ? ??? ????? ?????? ????? ?????? ??????? ??????
-auth.login.invalid=??? ???????? ?? ???? ?????? ??? ????
-error.internal=??? ??? ??. ???? ???????? ??????.
-access.denied=???? ???? ?????? ?????? ??? ???????.
+auth.username.required=اسم المستخدم مطلوب
+auth.username.invalid=يمكن أن يحتوي اسم المستخدم فقط على أحرف وأرقام ونقطة وشرطة وشرطة سفلية (من 3 إلى 30 حرفاً)
+auth.password.required=كلمة المرور مطلوبة
+auth.password.weak=يجب أن تتكون كلمة المرور من 8 إلى 72 حرفاً وأن تحتوي على حرف كبير وحرف صغير ورقم
+auth.login.invalid=اسم المستخدم أو كلمة المرور غير صحيح
+error.internal=حدث خطأ ما. يرجى المحاولة لاحقاً.
+access.denied=ليست لديك صلاحية لتنفيذ هذا الإجراء
