--- a/user-service/src/main/resources/i18n/messages_ar.properties
+++ b/user-service/src/main/resources/i18n/messages_ar.properties
@@ -1,23 +1,22 @@
-auth.username.required=??? ???????? ?????
-auth.username.invalid=???? ?? ????? ??? ???????? ??? ???? ?? ????? ?? ???? ?? ???? ?? ???? ????? (???? ?????)
-auth.password.required=???? ?????? ??????
-auth.password.weak=??? ?? ???? ???? ?????? ??? ? ??? ????? ?????? ????? ?????? ?????? ?????? ??????
-auth.email.required=?????? ?????????? ?????
-auth.email.invalid=?????? ?????????? ??? ????
-auth.username.taken=??? ???????? ????? ??????
-auth.email.taken=?????? ?????????? ????? ??????
-auth.login.invalid=??? ???????? ?? ???? ?????? ??? ????
-jwt.invalid=??? ?????? ??? ????
-jwt.expired=????? ?????? ?????
-jwt.missing=??? ??????? ?????
-jwt.refresh.required=????? ??? ?????
-jwt.s2s.required=????? ??? ???? ??? ????
-jwt.s2s.audience=????? ????????? ????? ??? ?????
-error.internal=??? ??? ??. ???? ???????? ??????.
-error.not_found=?????? ??? ?????
-access.denied=???? ???? ?????? ?????? ??? ???????.
-
-jwt.refresh.invalid=??? ??????? ??? ????
-refresh.invalid=??? ??????? ??? ????
-refresh.revoked=?? ??????? ??? ??????? ?? ?? ??????
-refresh.expired=????? ?????? ??? ???????
+auth.username.required=اسم المستخدم مطلوب
+auth.username.invalid=يمكن أن يحتوي اسم المستخدم فقط على أحرف وأرقام ونقطة وشرطة وشرطة سفلية (٣ إلى ٣٠ حرفًا)
+auth.password.required=كلمة المرور مطلوبة
+auth.password.weak=يجب أن تتكون كلمة المرور من ٨ إلى ٧٢ حرفًا وتشمل أحرفًا كبيرة وصغيرة وأرقامًا
+auth.email.required=البريد الإلكتروني مطلوب
+auth.email.invalid=البريد الإلكتروني غير صالح
+auth.username.taken=اسم المستخدم موجود بالفعل
+auth.email.taken=البريد الإلكتروني موجود بالفعل
+auth.login.invalid=اسم المستخدم أو كلمة المرور غير صحيحة
+jwt.invalid=رمز الدخول غير صالح
+jwt.expired=انتهت صلاحية الرمز
+jwt.missing=رمز التفويض مفقود
+jwt.refresh.required=مطلوب رمز تحديث
+jwt.s2s.required=مطلوب رمز خدمة إلى خدمة
+jwt.s2s.audience=جمهور غير صالح لرمز الخدمة إلى الخدمة
+error.internal=حدث خطأ ما. يرجى المحاولة لاحقًا
+error.not_found=المورد غير موجود
+access.denied=ليست لديك صلاحية لتنفيذ هذا الإجراء
+jwt.refresh.invalid=رمز التحديث غير صالح
+refresh.invalid=رمز التحديث غير صالح
+refresh.revoked=تم استخدام رمز التحديث أو إبطاله
+refresh.expired=انتهت صلاحية رمز التحديث
